src/objects/Campaign_Team__c.object
<CustomObject>
    <description>Object to add users to a campaign team</description>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Teams</relationshipLabel>
        <relationshipName>Campaign_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Member_Department__c</fullName>
        <label>Member Department</label>
        <picklist>
            <picklistValues>
                <fullName>Mail Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail Online</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaign_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Campaign Team</label>
    <nameField>
        <label>Campaign Team</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>